# hackhack

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: main.ts
src-rocket/: .gitignore  Cargo.toml  hackhack.db  rustc-ice-2024-08-19T07_22_35-19664.txt
src-rocket/openvpn-install/: openvpn-install.sh
src-rocket/src/: main.rs  table.rs  verify.rs
src-rocket/src/views/: auth.rs  mod.rs  target.rs
src-rocket/targets/: network.md
src-rocket/targets/first/: data.sql  docker-compose.yml
src-rocket/targets/first/html/: index.php  init.sh
src/router/: index.ts
src/util/: axiostance.ts  nighttime.ts
src/views/: index.vue  panel.vue
