[package]
name = "src-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
# for web
rocket = { version = "0.5.1", features = ["json"] }
# for verfityCode
rand = "0.8.5"
lettre = "0.9"
lettre_email = "0.9"

# for database
rusqlite = { version = "0.32.0", features = ["bundled"] }
once_cell = "1.19.0"

# for auth
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
jsonwebtoken = "9.3.0"
rocket-jwt = "0.5.2"

# for cors
rocket_cors = "0.6.0"
